# blob-effect

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.devcontainer/: devcontainer.json
blob_effect/: main.py
blob_effect/script/args/: __init__.py
blob_effect/script/config/: __init__.py
blob_effect/script/pipeline/: __init__.py  pipeline.py
blob_effect/service/utils/Load/: LoadImage.py
blob_effect/service/utils/Save/: SaveImage.py
blob_effect/service/utils/Show/: ShowImage.py
blob_effect/service/vision/Effect/BlobEffect/: __init__.py  blob.py  blob_effect.py  spline.py
blob_effect/service/vision/Preprocess/: Resize.py
cfg/: demo1.yml  demo2.yml
demo/: blob_effect.ipynb
docs/: config-rule.md
src/: __init__.py  __main__.py  main.py
src/__script/args/: args.py
src/__script/config/: config.py
src/__script/pipeline/: pipeline.py
src/blob_effect/: __init__.py
src/blob_effect/bootstrap/: __init__.py
src/blob_effect/common/: __init__.py  base.py  components.py
src/blob_effect/config/: message.ini
src/blob_effect/io/: __init__.py  info.py  load.py  save.py
src/blob_effect/utils/: __init__.py  pipeline.py  recipe.py
src/blob_effect/vision/: __init__.py
src/blob_effect/vision/blob/: __init__.py  blob.py  effect.py  info.py
src/blob_effect/vision/resize/: __init__.py  info.py  resize.py
src/cfg/: config.yml
src/script/blob_effect/: __init__.py  blob.py  blob_effect.py  preprocess.py
src/script/config/: __init__.py  config.py
src/script/utils/: args.py
