[tool.poetry]
name = "project"
version = "0.2.1"
description = ""
authors = ["Kodai YAMASHITA <nglcobdai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pillow = "^10.0.1"
opencv-python = "^4.8.1.78"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pep8 = "^1.7.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
ipython = "^8.15.0"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
